--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && \
 RUN cd /electrumx* && python3 setup.py install
 
 ENV SERVICES="tcp://:50001"
-ENV COIN=BitcoinSV
+ENV COIN=Radiant
 ENV DB_DIRECTORY=/db
 ENV DAEMON_URL="http://username:password@hostname:port/"
 ENV ALLOW_ROOT=true
@@ -31,5 +31,5 @@ CMD ["/usr/bin/python3", "/usr/local/bin/electrumx_server"]
 
 # build it with eg.: `docker build -t electrumx .`
 # run it with eg.:
-# `docker run -d --net=host -v /home/electrumx/db/:/db -e DAEMON_URL="http://youruser:yourpass@localhost:8332" -e REPORT_SERVICES=tcp://example.com:50001 electrumx`
+# `docker run -d --net=host -v /home/electrumx/db/:/db -e DAEMON_URL="http://youruser:yourpass@localhost:7332" -e REPORT_SERVICES=tcp://example.com:50001 electrumx`
 # for a proper clean shutdown, send TERM signal to the running container eg.: `docker kill --signal="TERM" CONTAINER_ID`
